Resolve #6 by forcing maven to use UTF-8