@@ -22,6 +22,11 @@
             <configuration>
                 <source>1.7</source>
                 <target>1.7</target>
+                <encoding>UTF-8</encoding>
+        		<inputEncoding>UTF-8</inputEncoding>
+       			 <outputEncoding>UTF-8</outputEncoding>
+        		<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m -ea
+        		-Dfile.encoding=UTF-8</argLine>
             </configuration>
        		</plugin>
             <!-- Plugin to execute the testng tests -->
